# Rust-WASM-Async-Example

./: package-lock.json  package.json
crate/: Cargo.toml
crate/js/: sleep.js
crate/src/: compat.rs  lib.rs  sleep.rs
js/: index.js
